// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionColumn snapshots should render SectionColumn 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--single"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons & labels 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
    </div>
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--single"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        >
          <div
            class="ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="close"
              height="12"
              name="Close"
              width="12"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--single"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        >
          <div
            class="ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="close"
              height="12"
              name="Close"
              width="12"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons and input connector 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--single"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
        <div
          class="SectionColumnContent__input-connector"
        >
          <div
            class="css-1jnxvbp Icon Icon--neutral-3"
            data-test-icon="inputs-connector"
            height="24"
            name="InputsConnector"
            width="24"
          />
        </div>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        >
          <div
            class="ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="close"
              height="12"
              name="Close"
              width="12"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
